overflow issue fix

--- a/src/components/aboutme/aboutme.styles.scss
+++ b/src/components/aboutme/aboutme.styles.scss
@@ -10,6 +10,7 @@
     flex-direction: column;
     align-items: center;
     height: calc(100vh - 75px);
+    min-height: fit-content;
     padding: 0.5rem;
     overflow: hidden;
     background: url("../../images/top-layered-waves-haikei.svg"), url("../../images/layered-waves-haikei.svg");
