--- a/src/components/landingpage/landingpage.styles.scss
+++ b/src/components/landingpage/landingpage.styles.scss
@@ -7,8 +7,8 @@
 }
 
 .content-container {
-    min-height: calc(100% - 150px);
-    height: fit-content;
+    height: calc(100% - 150px);
+    min-height: fit-content;
     background: url("../../images/layered-waves-haikei.svg");
     background-repeat: no-repeat;
     background-position: bottom;
